[gd_scene load_steps=4 format=3 uid="uid://dncs6766etnt3"]

[ext_resource type="Script" path="res://ui.gd" id="1_woipt"]
[ext_resource type="Theme" uid="uid://okvtjgmg07sp" path="res://themes/new_theme.tres" id="2_ssdjn"]

[sub_resource type="ImageTexture" id="ImageTexture_8q8mj"]

[node name="Node" type="Node"]

[node name="background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ImageTexture_8q8mj")

[node name="ui" type="CanvasLayer" parent="."]
script = ExtResource("1_woipt")

[node name="MainMenu" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ssdjn")

[node name="CenterContainer" type="CenterContainer" parent="ui/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ui/MainMenu/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ui/MainMenu/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ui/MainMenu/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GameName" type="Label" parent="ui/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Game Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="ui/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[node name="Settings" type="Button" parent="ui/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Settnigs
"

[node name="Quit" type="Button" parent="ui/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="SettingsMenu" type="Control" parent="ui"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="ui/SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ui/SettingsMenu/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ui/SettingsMenu/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="ui/SettingsMenu/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ui/SettingsMenu/CenterContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Settings" type="Label" parent="ui/SettingsMenu/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="ui/SettingsMenu/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Back
"

[node name="Settings2" type="Label" parent="ui/SettingsMenu/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings3" type="Label" parent="ui/SettingsMenu/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings4" type="Label" parent="ui/SettingsMenu/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Settings5" type="Label" parent="ui/SettingsMenu/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndGameScreen" type="Control" parent="ui"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ssdjn")
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="ui/EndGameScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ui/EndGameScreen/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ui/EndGameScreen/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ui/EndGameScreen/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="You died" type="Label" parent="ui/EndGameScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "DEATH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="restart" type="Button" parent="ui/EndGameScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Restart"

[node name="GoBack" type="Button" parent="ui/EndGameScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Back to main menu"

[connection signal="pressed" from="ui/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Start" to="ui" method="_on_start_pressed"]
[connection signal="pressed" from="ui/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Settings" to="ui" method="_on_settings_pressed"]
[connection signal="pressed" from="ui/MainMenu/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Quit" to="ui" method="_on_quit_pressed"]
[connection signal="pressed" from="ui/SettingsMenu/CenterContainer/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/Back" to="ui" method="_on_back_pressed"]
[connection signal="pressed" from="ui/EndGameScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/restart" to="ui" method="_on_restart_pressed"]
[connection signal="pressed" from="ui/EndGameScreen/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/GoBack" to="ui" method="_on_go_back_pressed"]
